k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matchleague-backend
spec:
  selector:
    app: matchleague-backend
  ports:
    - name: http
      port: 80
      targetPort: 5002
  type: ClusterIP
